Final changes to my hearthstone practice page

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <nav>
         <ul>
-            <li>#1</li>
-            <li>#2</li>
-            <li>#3</li>
-            <li>#4</li>
+            <li><a href="page2.html#Tirion">#1</a></li>
+            <li><a href="page2.html#Boom">#2</a></li>
+            <li><a href="page2.html#Ragnaros">#3</a></li>
+            <li><a href="page2.html#Leeroy">#4</a></li>
             <li><a href="page2.html#Deathwing">#5</a></li>
             <li><a href="#Lich">#6</a></li>
             <li><a href="#Yogg">#7</a></li>
@@ -122,6 +122,7 @@
     <article>
         <img src="http://hearth-static.tappedout.net/ht-cards/whispers-of-the-old-gods/og_134/gold.gif" class="Yogg">
         <p class="kazakus-article">
+            <br>
             <br>
             <br>
             <br>
