--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,7 @@
 
 </article>
 
-<h2 id="Leeroy">#4 Leeroy Jenkins</h2>
+<h2 id="Leeroy"><a href="https://hearthstone.gamepedia.com/Leeroy_Jenkins" target="_blank">#4 Leeroy Jenkins</a></h2>
 
 <article>
     <img src="https://vignette.wikia.nocookie.net/hearthstone/images/c/cf/LeeroyJenkins.gif/revision/latest?cb=20131211224447" class="Leeroy">
@@ -65,60 +65,66 @@
 
 </article>
 
-<h2 id="Kazakus">#3 KAZAKUS</h2>
+<h2 id="Ragnaros"><a href="https://hearthstone.gamepedia.com/Ragnaros_the_Firelord" target="_blank">#3 Ragnaros</a></h2>
 
 <article>
-    <img src="https://media-hearth.cursecdn.com/avatars/329/138/49622.png" class="Kazakus">
+    <img src="https://vignette.wikia.nocookie.net/hearthstone/images/8/83/RagnarostheFirelord.gif/revision/latest?cb=20131211224450" class="Ragnaros">
     <p class="kazakus-article">
         <br>
         <br>
         <br>
-        <br> When Kazakus burst on the scene was something compeletly new. The tri-class cards were something different,
-        out of the tri-class legendaries Kazakus was definately my favorite. I enjoyed how you could create your own
-        potion. You had the option on how much mana you wanted to spend on the spell. If you were in a bind you could
-        cheap out. Or if you were playing for the long run you could craft a 10 mana spell. The 10 mana spells were pretty
-        awesome. Everytime it seemed like you got something a little different. My favority deck to play Kazakus in was
-        my Reno Mage. I loved the flexibily that I got playing Kazakus.
+        <br> Ragnaros the Firelord is an all-around great Hearthstone. 
+        I love that he yells “Die Insect” when he attacks, and because he attacks typically at the end of your turn it’s like everyone has to stop and watch him. 
+        Part of the fun of Ragnaros is that you don’t know who he will attack as he does 8 damage randomly. Sometimes you are cheering for him to hit face, and others you curse him for doing so. 
+        That’s what makes Ragnaros so great. He also puts a lot of pressure on your opponent to remove him. (Unless they have a board full of 1/1 imps or something). 
+        Ragnaros is great even that if he is silenced you still have an 8/8 minion on the board who can attack normally. For all the reasons above Ragnaros is my #3.
     </p>
 
 </article>
 
-<h2 id="Kazakus">#2 KAZAKUS</h2>
+<h2 id="Boom"><a href="https://hearthstone.gamepedia.com/Dr._Boom" target="_blank">#2 Dr. Boom</a></h2>
 
 <article>
-    <img src="https://media-hearth.cursecdn.com/avatars/329/138/49622.png" class="Kazakus">
+    <img src="http://hearth-static.tappedout.net/ht-cards/goblins-vs-gnomes/gvg_110/gold.gif" class="Boom">
     <p class="kazakus-article">
         <br>
         <br>
         <br>
-        <br> When Kazakus burst on the scene was something compeletly new. The tri-class cards were something different,
-        out of the tri-class legendaries Kazakus was definately my favorite. I enjoyed how you could create your own
-        potion. You had the option on how much mana you wanted to spend on the spell. If you were in a bind you could
-        cheap out. Or if you were playing for the long run you could craft a 10 mana spell. The 10 mana spells were pretty
-        awesome. Everytime it seemed like you got something a little different. My favority deck to play Kazakus in was
-        my Reno Mage. I loved the flexibily that I got playing Kazakus.
+        <br>
+        <br> Dr. 7 as he was called by many was released with Hearthstones first expansion Goblins vs. Gnomes. 
+        He was incredibly powerful and was pretty much an auto include in any tempo deck due to the power of his boom bots. 
+        You got 9/9 in minion value on the board along with the possibility of the boom bots randomly dealing 1-4 damage. 
+        Many people were quickly calling for a nerf that never came. 
+        Though he is a great card he is not seeing as much play in the wild format as you might expect. 
+        Wild decks are crafted to very control based or very aggressive. It is hard for the doctor to find his place in the lineup. 
     </p>
 
 </article>
 
-<h2 id="Kazakus">#1 KAZAKUS</h2>
+<h2 id="Tirion"><a href="https://hearthstone.gamepedia.com/Tirion_Fordring" target="_blank">#1 Tirion Fordring</a></h2>
 
 <article>
-    <img src="https://media-hearth.cursecdn.com/avatars/329/138/49622.png" class="Kazakus">
+    <img src="https://vignette.wikia.nocookie.net/hearthstone/images/b/b5/TirionFordring.gif/revision/latest?cb=20160317225817" class="Tirion">
     <p class="kazakus-article">
         <br>
         <br>
         <br>
-        <br> When Kazakus burst on the scene was something compeletly new. The tri-class cards were something different,
-        out of the tri-class legendaries Kazakus was definately my favorite. I enjoyed how you could create your own
-        potion. You had the option on how much mana you wanted to spend on the spell. If you were in a bind you could
-        cheap out. Or if you were playing for the long run you could craft a 10 mana spell. The 10 mana spells were pretty
-        awesome. Everytime it seemed like you got something a little different. My favority deck to play Kazakus in was
-        my Reno Mage. I loved the flexibily that I got playing Kazakus.
+        <br>
+        <br> “Put your faith in the light!” Announces Tirion Fordring as he enters the arena. 
+        Tirion as of today is my favorite Hearthstone card. 
+        Tirion is a Paladin class card which means that you cannot put him in every deck like most of the others. 
+        With that being said Paladin is my most played class. That is due to the fact that the mysterious challenger is my boy. 
+        Paladin is just always a good time to play. They don’t seem overpowered typically but you always feel like you have a good shot to win. 
+        Tirion himself is a 6/6 body with taunt and divine shield. He as a deathrattle that give you Ashbringer a 5/3 weapon. Tirion is the top dog in my book.  
     </p>
 
 </article>
 
+<ul class="closing-nav">
+    <li><a href="index.html">Top</a></li>
+    <li><a href="page2.html">#2</a></li>
+    
+        </ul>
 
 
 <footer>
